--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <meta name="keywords" content="SD Life Wealth, case study, investment growth, financial planning, Australia">
     <title>SD Life Wealth Case Study - Growing Investments</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="https://prettygracia.github.io/sd-life-wealth-case-study2/">
+    <meta name="google-site-verification" content="vQmSYckz8pc7RaA1C71jtqMpoVBqF6KSmc3ANvqtJzc" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G29NRS6MZV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-G29NRS6MZV');
+</script>
 </head>
 <body>
 
